[package]
name = "qbft_manager"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[dependencies]
dashmap = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
processor = { workspace = true }
qbft = { workspace = true }
slot_clock = { workspace = true }
ssv_types = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
types = { workspace = true }
task_executor = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
