[package]
name = "qbft"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[dependencies]
derive_more = { workspace = true }
indexmap = { workspace = true }
ssv_types = { workspace = true }
tracing = { workspace = true }
types = { workspace = true }
sha2 = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
